--- a/frontend/src/components/Header.css
+++ b/frontend/src/components/Header.css
@@ -1,5 +1,5 @@
 .Header {
-    background-color: rgb(20, 20, 20);
+    background-color: rgb(23, 21, 33);
     color: rgb(223, 223, 223);
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: large;
@@ -7,6 +7,10 @@
     text-align: end;
     box-shadow: 0px 1px 50px rgb(211, 84, 84);
     text-shadow: 0px 0px 4px rgb(211, 84, 84);
+}
+
+.divHeader {
+    height: 50px;
 }
 
 .RiffRoots {
@@ -20,12 +24,25 @@
     position: relative;
     right: 100px;
     top: 15px;
+    background: none;
+    border: none;
+    color: aliceblue;
+    font-size: large;
+    text-shadow: 0px 0px 12px rgb(211, 84, 84);
+    cursor: pointer;
 }
 
 .SignUp {
     position: relative;
     right: 50px;
     top: 15px;
+    cursor: pointer;
+    background: none;
+    border: none;
+    color: aliceblue;
+    font-size: large;
+    text-shadow: 0px 0px 12px rgb(211, 84, 84);
+    cursor: pointer;
 }
 
 .NameHeader {
@@ -38,4 +55,9 @@
   -webkit-text-fill-color: transparent;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     
+}
+
+
+div > button:hover {
+    cursor: pointer;
 }
