--- a/frontend/src/components/Header.css
+++ b/frontend/src/components/Header.css
@@ -1,3 +1,129 @@
+html {
+    background: #F2F2F2;
+  }
+  
+  .logo-holder {
+      background: #a928a500;
+      width: 180px;
+      height: 220px;
+      -webkit-transform: translateZ(0);
+   }
+  
+  .bg {
+  
+    position: relative;
+    top: 9px;
+    left: 8px;
+    right: 8px;
+    bottom: 8px;
+    background: url(http://boutique.flarework.com/wp-content/themes/boutique/img/logo_large.png) center 0px no-repeat ;
+      background-size: contain;
+      -webkit-filter: drop-shadow(0px 6px 25px rgba(140, 48, 160, 0.5));
+  }
+  
+  .bar {
+      position: relative;
+      height: 8px;
+      background: #b52e5e;
+      width:  0%;
+      top: -70px;
+      left: 18px;
+      margin-top: 8px;
+      box-shadow: 0 0 3px rgba(192,192,192,0.9);
+      animation: fill 5s infinite alternate, colors 5s infinite alternate;
+  }
+  
+  .bar.fill1 {
+    animation: fill-1 5s infinite alternate, colors 5s infinite alternate;
+  }
+  
+  .bar.fill2 {
+     animation:  fill-2 5s infinite alternate, colors 5s infinite alternate;
+  }
+  
+  
+  .bar.fill3 {
+     animation:  fill-3 5s infinite alternate, colors 5s infinite alternate;
+  }
+  
+  
+  .bar.fill4 {
+     animation:  fill-4 5s infinite alternate, colors 5s infinite alternate;
+  }
+  
+  .bar.fill5 {
+     animation:  fill-5 5s infinite alternate, colors 5s infinite alternate;
+  }
+  
+  .bar.fill6 {
+     animation:  fill-6 5s infinite alternate, colors 5s infinite alternate;
+  }
+  
+  
+  
+  @keyframes fill {
+    0%   { width: 0; }
+    33%  { width: 30px;}
+    66%  { width: 10px;}
+    100% { width: 105px; }
+  }
+  
+  @keyframes fill-1 {
+    0%   { width: 0; }
+    33%  { width: 50px;}
+    66%  { width: 20px;}
+    100% { width: 130px; }
+  }
+  
+  @keyframes fill-2 {
+    0%   { width: 0; }
+    33%  { width: 90px;}
+    66%  { width: 70px;}
+    100% { width: 136px; }
+  }
+  
+  @keyframes fill-3 {
+    0%   { width: 0; }
+    33%  { width: 50px;}
+    66%  { width: 24px;}
+    100% { width: 109px; }
+  }
+  
+  @keyframes fill-4 {
+    0%   { width: 0; }
+    33%  { width: 98px;}
+    66%  { width: 34px;}
+    100% { width: 99px; }
+  }
+  
+  @keyframes fill-5 {
+    0%   { width: 0; }
+    33%  { width: 30px;}
+    66%  { width: 10px;}
+    100% { width: 148px; }
+  }
+  
+  
+  @keyframes fill-6 {
+    0%   { width: 0; }
+    33%  { width: 48px;}
+    66%  { width: 22px;}
+    100% { width: 140px; }
+  }
+  
+  @keyframes colors {
+    0% { background-color: #d14a7e;}
+    50% { background-color: rgb(126, 51, 170);}
+    100% { background-color: #c45454;}
+  }
+  
+
+
+
+
+
+
+
 .Header {
     background-color: rgb(23, 21, 33);
     color: rgb(223, 223, 223);
@@ -13,12 +139,13 @@
     height: 50px;
 }
 
-.RiffRoots {
+/* .RiffRoots {
     position: relative;
     bottom: 50px;
     height:50px;
     left: 20px;
 }
+ */
 
 .LogIn {
     position: relative;
@@ -27,8 +154,12 @@
     background: none;
     border: none;
     color: aliceblue;
-    font-size: large;
-    text-shadow: 0px 0px 12px rgb(211, 84, 84);
+    font-size: large; 
+    cursor: pointer;
+}
+
+.LogIn:hover {
+    text-shadow: 0px 0px 14px rgb(211, 84, 84);
     cursor: pointer;
 }
 
@@ -41,14 +172,18 @@
     border: none;
     color: aliceblue;
     font-size: large;
-    text-shadow: 0px 0px 12px rgb(211, 84, 84);
+    cursor: pointer;
+}
+
+.SignUp:Hover {
+    text-shadow: 0px 0px 14px rgb(211, 84, 84);
     cursor: pointer;
 }
 
 .NameHeader {
     position: relative;
-    bottom: 97px;
-    left: 150px;
+    bottom: 107px;
+    left: 170px;
     text-shadow: 0px 0px 10px rgb(211, 84, 84);
     background: -webkit-linear-gradient( rgb(188, 12, 241), rgb(212, 4, 4));
   -webkit-background-clip: text;
