--- a/frontend/src/pages/Home.css
+++ b/frontend/src/pages/Home.css
@@ -25,6 +25,18 @@
   }
 }
 
+@keyframes botonblend {
+  0% {
+    box-shadow: 10px 6px 10px rgba(211, 84, 84, 0.6);
+  }
+  50% {
+    box-shadow: 10px 6px 10px rgba(135, 38, 210, 0.511);
+  }
+  100% {
+    box-shadow: 10px 6px 10px rgba(211, 84, 84, 0.6);
+  }
+}
+
 .Logo {
   height: 300px;
   width: 300px;
@@ -55,12 +67,13 @@
   font-size: xx-large;
   color: rgb(187, 187, 187);
   text-shadow: 2px 2px 9px black;
+  margin-bottom: 60px;
 }
 
 .Home .buscador {
   display: flex;
-  margin: 0 auto;
-  margin-top: 60px;
+  /* margin: 0 auto; */
+  /* margin-top: 60px; */
   height: 30px;
   width: 550px;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -70,6 +83,27 @@
   box-sizing: border-box;
   border: 13px rgb(211, 84, 84);
   animation: blend 6s ease-in-out infinite;
+}
+.Home .barrayboton {
+  display: flex;
+  justify-content: center;
+}
+
+.Home .search {
+  outline: 0;
+  border: 0;
+  cursor: pointer;
+  color: #fff;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-weight: 500;
+  border-radius: 4px;
+  font-size: 14px;
+  height: 30px;
+  padding: 0px 15px;
+  text-shadow: rgb(0 0 0 / 25%) 0px 3px 8px;
+  background: linear-gradient(92.88deg, rgb(111, 62, 160) 9.16%, rgb(120, 67, 204) 43.89%, rgb(130, 63, 215) 64.72%);
+  transition: all 0.5s ease 0s;
+  animation: botonblend 6s ease-in-out infinite;
 }
 
 .Home {
