--- a/frontend/src/components/Header.css
+++ b/frontend/src/components/Header.css
@@ -2,13 +2,6 @@ html {
     background: #F2F2F2;
   }
   
-  .logo-holder {
-      background: #a928a500;
-      width: 180px;
-      height: 220px;
-      -webkit-transform: translateZ(0);
-   }
-  
   .bg {
   
     position: relative;
@@ -133,19 +126,12 @@ html {
     text-align: end;
     box-shadow: 0px 1px 50px rgb(211, 84, 84);
     text-shadow: 0px 0px 4px rgb(211, 84, 84);
+    animation: blend 6s ease-in-out infinite;
 }
 
 .divHeader {
     height: 50px;
 }
-
-/* .RiffRoots {
-    position: relative;
-    bottom: 50px;
-    height:50px;
-    left: 20px;
-}
- */
 
 .LogIn {
     position: relative;
