--- a/frontend/src/components/SongCard.css
+++ b/frontend/src/components/SongCard.css
@@ -1,9 +1,46 @@
 .song-card {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  color: aliceblue;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+	background: 
+    linear-gradient(-60deg, rgb(16 16 20), rgb(126 51 170) );
+	background-size: 400% 400%;
+	animation: gradient 15s ease infinite;
+  overflow: visible;
+}
+
+.reversed{
+  flex-direction: row-reverse;
+}
+
+.song-card li {
+  list-style: none;
+  margin-left: 30px;
 }
 
 .song-card img {
-  width: 250px;
-  height: 250px;
+  width: 350px;
+  height: 350px;
+  margin-left: 70px;
+  margin-top: 80px;
+  box-shadow: 0px 30px 30px black;
+
+}
+
+.info {
+  margin-left: 180px;
+  margin-top: 80px;
+}
+
+@keyframes gradient {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
 }
