--- a/frontend/src/components/SongCard.css
+++ b/frontend/src/components/SongCard.css
@@ -12,6 +12,13 @@
 
 .reversed{
   flex-direction: row-reverse;
+  background: 
+    linear-gradient(-60deg, rgb(51, 31, 38), rgb(170, 51, 117) );
+    animation: gradient 15s ease infinite;
+}
+
+.sampleImg{
+  margin-right: 70px;
 }
 
 .song-card li {
