--- a/frontend/src/components/SongCard.css
+++ b/frontend/src/components/SongCard.css
@@ -10,6 +10,26 @@
   overflow: visible;
 }
 
+.info {
+  text-shadow: 0px 0px 15px black;
+}
+
+.songtitle {
+  font-size: xx-large;
+}
+
+.songartist {
+  margin-bottom: 30px;
+}
+
+.released{
+  margin-bottom: 50px;
+}
+
+.producer {
+  margin-top: 50px;
+}
+
 .reversed{
   flex-direction: row-reverse;
   background: 
