--- a/frontend/src/components/SongCard.css
+++ b/frontend/src/components/SongCard.css
@@ -1,23 +1,24 @@
+.song-card a {
+  text-decoration: none;
+}
 .song-card {
   display: flex;
   flex-direction: row;
   color: aliceblue;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-	background: 
-    linear-gradient(-60deg, rgb(16 16 20), rgb(126 51 170) );
-	background-size: 400% 400%;
-	animation: gradient 15s ease infinite;
+  background: linear-gradient(-60deg, rgb(16 16 20), rgb(126 51 170));
+  background-size: 400% 400%;
+  animation: gradient 15s ease infinite;
   overflow: visible;
 }
 
-.reversed{
+.reversed {
   flex-direction: row-reverse;
-  background: 
-    linear-gradient(-60deg, rgb(51, 31, 38), rgb(170, 51, 117) );
-    animation: gradient 15s ease infinite;
+  background: linear-gradient(-60deg, rgb(51, 31, 38), rgb(170, 51, 117));
+  animation: gradient 15s ease infinite;
 }
 
-.sampleImg{
+.sampleImg {
   margin-right: 70px;
 }
 
@@ -32,7 +33,6 @@
   margin-left: 70px;
   margin-top: 80px;
   box-shadow: 0px 30px 30px black;
-
 }
 
 .info {
@@ -41,13 +41,13 @@
 }
 
 @keyframes gradient {
-	0% {
-		background-position: 0% 50%;
-	}
-	50% {
-		background-position: 100% 50%;
-	}
-	100% {
-		background-position: 0% 50%;
-	}
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
 }
