--- a/frontend/src/components/SongCard.css
+++ b/frontend/src/components/SongCard.css
@@ -20,14 +20,6 @@
 
 .sampleImg {
   margin-right: 70px;
-}
-
-.song-card li {
-  list-style: none;
-  margin-left: 30px;
-}
-
-.song-card img {
   width: 350px;
   height: 350px;
   margin-left: 70px;
@@ -35,9 +27,25 @@
   box-shadow: 0px 30px 30px black;
 }
 
+.song-card li {
+  list-style: none;
+  margin-left: 30px;
+}
+
+.songImg {
+  width: 350px;
+  height: 350px;
+  margin-left: 70px;
+  margin-top: 100px;
+  box-shadow: 0px 30px 30px black;
+}
+
 .info {
   margin-left: 180px;
   margin-top: 80px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
 }
 
 @keyframes gradient {
