--- a/frontend/src/components/Header.css
+++ b/frontend/src/components/Header.css
@@ -341,4 +341,9 @@ div > button:hover {
   position: relative;
   top: 7px;
   right: 15px;
+  background: none;
+  filter: invert();
+  border: none;
+  margin-right: 30px;
+  margin-left: 30px;
 }
