--- a/frontend/src/components/UserFavourites.css
+++ b/frontend/src/components/UserFavourites.css
@@ -4,7 +4,7 @@
   display: flex;
   flex-flow: wrap;
   gap: 5px;
-  width: 800px;
+  width: 786.4px;
   max-width: 75vw;
 }
 
@@ -23,6 +23,7 @@
   align-items: center;
   max-width: 200px;
   background-color: #a855f7;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 .favSong img {
